# Accurate-3D-Reconstruction

./: CMakeLists.txt  main.cpp
Engine/: CMakeLists.txt  IMUSourceEngine.cpp  IMUSourceEngine.h  ImageSourceEngine.cpp  ImageSourceEngine.h  Kinect2Engine.cpp  Kinect2Engine.h  LibUVCEngine.cpp  LibUVCEngine.h  OpenNIEngine.cpp  OpenNIEngine.h  UIEngine.cpp  UIEngine.h
ITMLib/: CMakeLists.txt  ITMLib.h
ITMLib/Engine/: ITMColorTracker.cpp  ITMColorTracker.h  ITMCompositeTracker.h  ITMDenseMapper.cpp  ITMDenseMapper.h  ITMDepthTracker.cpp  ITMDepthTracker.h  ITMEKF.cpp  ITMEKF.h  ITMIMUCalibrator.h  ITMIMUTracker.cpp  ITMIMUTracker.h  ITMLowLevelEngine.h  ITMMainEngine.cpp  ITMMainEngine.h  ITMMeshingEngine.h  ITMRenTracker.cpp  ITMRenTracker.h  ITMSceneReconstructionEngine.h  ITMSwappingEngine.h  ITMTracker.h  ITMTrackerFactory.h  ITMTrackingController.cpp  ITMTrackingController.h  ITMViewBuilder.h  ITMVisualisationEngine.cpp  ITMVisualisationEngine.h  ITMWeightedICPTracker.cpp  ITMWeightedICPTracker.h
ITMLib/Engine/DeviceAgnostic/: ITMColorTracker.h  ITMDepthTracker.h  ITMEKF.h  ITMLowLevelEngine.h  ITMMeshingEngine.h  ITMPixelUtils.h  ITMRenTracker.h  ITMRepresentationAccess.h  ITMSceneReconstructionEngine.h  ITMSwappingEngine.h  ITMViewBuilder.h  ITMVisualisationEngine.h  ITMWeightedICPTracker.h
ITMLib/Engine/DeviceSpecific/CUDA/: ITMCUDAUtils.h  ITMColorTracker_CUDA.cu  ITMColorTracker_CUDA.h  ITMDepthTracker_CUDA.cu  ITMDepthTracker_CUDA.h  ITMEKF_CUDA.cu  ITMEKF_CUDA.h  ITMLowLevelEngine_CUDA.cu  ITMLowLevelEngine_CUDA.h  ITMMeshingEngine_CUDA.cu  ITMMeshingEngine_CUDA.h  ITMRenTracker_CUDA.cu  ITMRenTracker_CUDA.h  ITMSceneReconstructionEngine_CUDA.cu  ITMSceneReconstructionEngine_CUDA.h  ITMSwappingEngine_CUDA.cu  ITMSwappingEngine_CUDA.h  ITMViewBuilder_CUDA.cu  ITMViewBuilder_CUDA.h  ITMVisualisationEngine_CUDA.cu  ITMVisualisationEngine_CUDA.h  ITMWeightedICPTracker_CUDA.cu  ITMWeightedICPTracker_CUDA.h
ITMLib/Objects/: ITMDisparityCalib.h  ITMExtrinsics.h  ITMGlobalCache.h  ITMIMUMeasurement.h  ITMImageHierarchy.h  ITMIntrinsics.h  ITMLocalVBA.h  ITMMesh.h  ITMPlainVoxelArray.h  ITMPointCloud.h  ITMPose.cpp  ITMPose.h  ITMRGBDCalib.h  ITMRenderState.h  ITMRenderState_VH.h  ITMScene.h  ITMSceneHierarchyLevel.h  ITMSceneParams.h  ITMTemplatedHierarchyLevel.h  ITMTrackingState.h  ITMView.h  ITMViewHierarchyLevel.h  ITMViewIMU.h  ITMVoxelBlockHash.h
ITMLib/Utils/: ITMCalibIO.cpp  ITMCalibIO.h  ITMLibDefines.h  ITMLibSettings.cpp  ITMLibSettings.h  ITMMath.h
ORUtils/: CMakeLists.txt  CUDADefines.h  Cholesky.h  Image.h  MathUtils.h  Matrix.h  MemoryBlock.h  PlatformIndependence.h  Vector.h
Utils/: CMakeLists.txt  FileUtils.cpp  FileUtils.h
cmake/: FindOpenNI2.cmake  FindTooN.cmake
